--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -2,20 +2,38 @@ global:
   scrape_interval: 15s
   scrape_timeout: 10s
   evaluation_interval: 15s
+
 alerting:
   alertmanagers:
-  - static_configs:
-    - targets: []
-    scheme: http
-    timeout: 10s
-    api_version: v1
+    - static_configs:
+        - targets: []
+      scheme: http
+      timeout: 10s
+      api_version: v1
+
 scrape_configs:
-- job_name: prometheus
-  honor_timestamps: true
-  scrape_interval: 15s
-  scrape_timeout: 10s
-  metrics_path: /metrics
-  scheme: http
-  static_configs:
-  - targets:
-    - localhost:9090
+  - job_name: prometheus
+    honor_timestamps: true
+    scrape_interval: 15s
+    scrape_timeout: 10s
+    metrics_path: /metrics
+    scheme: http
+    static_configs:
+      - targets:
+        - localhost:9090
+
+  - job_name: opensearch
+    scrape_interval: 10s
+    scrape_timeout: 10s
+    metrics_path: "/_prometheus/metrics"
+    scheme: http
+    static_configs:
+      - targets:
+        - opensearch-node1:9200
+        - opensearch-node2:9200
+    dns_sd_configs:
+      - names:
+        - opensearch-node1
+        - opensearch-node2
+        type: 'A'
+        port: 9200
